# wgpu_2d_workspace

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
src/: main.rs  timer.rs
src/application/: mod.rs
src/input/: mod.rs
src/rendering/: mod.rs
src/shader_manager/: mod.rs
src/shaders/: circle.wgsl  common.wgsl  points.wgsl  rect.wgsl  triangle.wgsl
src/wgpu_context/: mod.rs
wgpu_2d/: Cargo.toml
wgpu_2d/examples/ecs_example/: main.rs
wgpu_2d/examples/game_pad_direction/: application.rs  main.rs
wgpu_2d/src/: lib.rs  main.rs  maybe_thread.rs  system.rs  timer.rs
wgpu_2d/src/application/: mod.rs
wgpu_2d/src/ecs/: mod.rs
wgpu_2d/src/input/: mod.rs
wgpu_2d/src/math/: mod.rs
wgpu_2d/src/rendering/: mod.rs
wgpu_2d/src/shader_manager/: mod.rs
wgpu_2d/src/shaders/: circle.wgsl  common.wgsl  points.wgsl  rect.wgsl  rings.wgsl  texture.wgsl  triangle.wgsl
wgpu_2d/src/wgpu_context/: mod.rs
