[package]
name = "wgpu_2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
log = "0.4.26"
pollster = "0.4.0"
rand = "0.9.0"
simple_logger = "5.0.0"
wgpu = "24.0.0"
winit = "0.30.9"
derive = {path = "../derive", version = "0.1.0"}
gamepad_input = {git = "https://github.com/NikhilNathanael/gamepad_input", version = "0.1.0"}
any-map = "0.1.0"
