[package]
name = "wgpu_2d"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
log = "0.4.26"
pollster = "0.4.0"
wgpu = "24.0.0"
winit = "0.30.9"
derive = {path = "../derive", version = "0.1.0"}
gamepad_input = {git = "https://github.com/NikhilNathanael/gamepad_input", version = "0.1.0"}
my_ecs = {git = "https://github.com/NikhilNathanael/my_ecs", version = "0.1.0", optional = true}

[dev-dependencies]
rand = "0.9.0"
simple_logger = "5.0.0"

[features]
default = ["ecs"]
ecs = ["dep:my_ecs"]
